Fix tag suggestions not showing above other elements

--- a/src/components/tagSearch/TagSearch.module.css
+++ b/src/components/tagSearch/TagSearch.module.css
@@ -35,6 +35,7 @@
     width: 100%;
     position: absolute;
     top: 42px;
+    z-index: 100;
 }
 
 .suggestion {
